# anchor-token-contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: airdrop.yml  collector.yml  community.yml  distributor.yml  gov.yml  main.yml  staking.yml
artifacts/: anchor_airdrop.wasm  anchor_collector.wasm  anchor_community.wasm  anchor_distributor.wasm  anchor_faucet.wasm  anchor_gov.wasm  anchor_staking.wasm  anchor_vesting.wasm  checksums.txt
contracts/airdrop/: Cargo.toml  README.md
contracts/airdrop/examples/: schema.rs
contracts/airdrop/schema/: config_response.json  instantiate_msg.json
contracts/airdrop/src/: contract.rs  error.rs  lib.rs  migration.rs  state.rs  tests.rs
contracts/airdrop/src/testing/: tests.rs
contracts/collector/: Cargo.toml  README.md
contracts/collector/examples/: schema.rs
contracts/collector/schema/: config_response.json  execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json
contracts/collector/src/: contract.rs  lib.rs  migration.rs  mock_querier.rs  state.rs  testing.rs
contracts/collector/tests/: integration.rs
contracts/community/: Cargo.toml  README.md
contracts/community/examples/: schema.rs
contracts/community/schema/: config_response.json  execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json
contracts/community/src/: contract.rs  state.rs  testing.rs
contracts/community/tests/: integration.rs
contracts/distributor/: Cargo.toml  README.md
contracts/distributor/examples/: schema.rs
contracts/distributor/schema/: config_response.json  execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json
contracts/distributor/src/: contract.rs  lib.rs  mock_querier.rs  state.rs  testing.rs
contracts/faucet/: Cargo.toml  README.md
contracts/faucet/schema/: handle_msg.json  init_msg.json
contracts/faucet/src/: contract.rs  testing.rs
contracts/gauge_controller/: Cargo.toml  README.md
contracts/gauge_controller/examples/: schema.rs
contracts/gauge_controller/schema/: all_gauge_addr_response.json  config_response.json  execute_msg.json  gauge_addr_response.json  gauge_count_response.json  gauge_relative_weight_at_response.json  gauge_relative_weight_response.json  gauge_weight_at_response.json  gauge_weight_response.json  instantiate_msg.json  n_gauges_response.json  query_msg.json  relative_weight_response.json  total_weight_at_response.json  total_weight_response.json
contracts/gauge_controller/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  state.rs  tests.rs  utils.rs
contracts/gov/: Cargo.toml  README.md
contracts/gov/examples/: schema.rs
contracts/gov/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json  poll_response.json  query_msg.json  staker_response.json  stakers_response.json
contracts/gov/src/: contract.rs  error.rs  lib.rs  migration.rs  mock_querier.rs  staking.rs  state.rs  tests.rs  voting_escrow.rs
contracts/gov/tests/: integration.rs
contracts/staking/: Cargo.toml  README.md
contracts/staking/examples/: schema.rs
contracts/staking/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json  pool_info_response.json  query_msg.json  reward_info_response.json  staker_info_response.json  state_response.json
contracts/staking/src/: contract.rs  lib.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contracts/staking/tests/: integration.rs
contracts/vesting/: Cargo.toml  README.md
contracts/vesting/examples/: schema.rs
contracts/vesting/schema/: config_response.json  execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json  query_msg.json  vesting_account_response.json  vesting_accounts_response.json
contracts/vesting/src/: contract.rs  error.rs  state.rs  tests.rs
contracts/vesting/src/testing/: tests.rs
contracts/voting_escrow/: Cargo.toml  README.md
contracts/voting_escrow/examples/: schema.rs
contracts/voting_escrow/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  lock_info_response.json  query_msg.json  user_slope_response.json  user_unlock_period_response.json  voting_power_response.json
contracts/voting_escrow/src/: checkpoint.rs  contract.rs  error.rs  lib.rs  state.rs  tests.rs  utils.rs
