[package]
name = "anchor-airdrop"
version = "1.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A Airdrop contract for Anchor Protocol - allow users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/default-cranelift"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
anchor-token = { version = "0.1.0", path = "../../packages/anchor_token" }
cw20 = "0.2"
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
schemars = "0.7"
sha3 = { version = "0.9.1", default-features = false }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex = "0.4"

[dev-dependencies]
cosmwasm-vm = { version = "0.10.1", default-features = false, features = ["iterator"] }
cosmwasm-schema = "0.10.1"
