[package]
name = "anchor-vesting"
version = "1.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw20 = { version = "0.2.1" }
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
anchor-token = { version = "0.1.0", path = "../../packages/anchor_token" }

[dev-dependencies]
cosmwasm-schema = { version = "0.11.0", default-features = false  }
